<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.visio.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/application_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:title="@string/title_activity_settings"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/application_toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/seekContainer"
        android:layout_marginTop="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Threshold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/threshold"
        android:tag="@string/threshold"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:labelFor="@string/threshold"
        android:max="10000"
        android:indeterminate="false"
        android:progress="100"
        android:layout_weight="5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/threshold_text"
            android:gravity="center"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Degrees"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/degrees"
            android:tag="@string/degrees"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:max="180"
            android:indeterminate="false"
            android:layout_weight="5"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/degrees_text"
                android:gravity="center"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/seekContainer"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        >

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gender_men"
        android:id="@+id/checkBox"
        android:layout_weight="1"
        android:gravity="center"
        android:tag="men"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gender_Women"
        android:id="@+id/checkBox2"
        android:layout_weight="1"
        android:gravity="center"
        android:tag="women"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gender_Unisex"
        android:id="@+id/checkBox3"
        android:layout_weight="1"
        android:gravity="center"
        android:tag="unisex"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
